# auv-navigation

./: .autotools  .cproject  .gitmodules  .project  Makefile.am  README.md  TODO.md  configure.ac
doc/: Doxyfile  Doxyfile.in  Makefile.am
etc/: Makefile.am  auv-navigation.cfg
etc/startup/: ttyUSB1.sh
include/: Makefile.am
include/garp/: imu.h  mti-g.h  rtdb.h  time-tracker.h  vector3d.h
lib/: Makefile.am  sharksoft.c  time-tracker.c
m4/: LEEME
src/: Makefile.am  auv-navigation.c  main.c  mti-g-simulator.c  mti-g.c  time-tracker.c
